--- a/layout/equationPane.css
+++ b/layout/equationPane.css
@@ -12,8 +12,7 @@
     -fx-border-style: solid;
     -fx-border-width: 0 1 0 0;
 }
-.gridPane{
-    -fx-border-color: rgb(200,200,200);
-    -fx-border-style: solid;
-    -fx-border-width: 0 0 1 0;
+#choiceBox{
+    -fx-background-radius:0;
+    color: white;
 }
