--- a/layout/BaseLayout.fxml
+++ b/layout/BaseLayout.fxml
@@ -76,7 +76,7 @@
                                           </accelerator>
                                       </MenuItem>
                               <SeparatorMenuItem mnemonicParsing="false" />
-                                      <MenuItem mnemonicParsing="false" text="Integration">
+                                      <MenuItem mnemonicParsing="false" onAction="#integrate" text="Integration">
                                           <accelerator>
                                               <KeyCodeCombination alt="UP" code="I" control="DOWN" meta="UP" shift="UP" shortcut="UP" />
                                           </accelerator>
@@ -115,7 +115,7 @@
                                     <Font size="15.0" />
                                  </font>
                               </Button>
-                              <Button contentDisplay="CENTER" mnemonicParsing="false" prefHeight="50.0" style="-fx-padding: 10;" textAlignment="CENTER">
+                              <Button fx:id="integralButton" contentDisplay="CENTER" mnemonicParsing="false" onAction="#integrate" prefHeight="50.0" style="-fx-padding: 10;" textAlignment="CENTER">
                                  <graphic>
                                     <ImageView fitHeight="30.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
