--- a/layout/DerivativePoint.fxml
+++ b/layout/DerivativePoint.fxml
@@ -5,16 +5,28 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<fx:root alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" spacing="5.0" type="HBox" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+
+<fx:root type="VBox" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label text="x =" />
-      <TextField fx:id="point" prefHeight="25.0" promptText="e.g. 5 or sin(pi/2)">
-         <tooltip>
-            <Tooltip text="Enter a number or an expression (e.g. 5 or sin(pi))" />
-         </tooltip></TextField>
+      <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" spacing="5.0">
+         <children>
+            <Label text="x =" />
+            <TextField fx:id="point" prefHeight="25.0" promptText="e.g. 5 or sin(pi/2)">
+               <tooltip>
+                  <Tooltip text="Enter a number or an expression (e.g. 5 or sin(pi))" />
+               </tooltip>
+            </TextField>
+         </children>
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding>
+      </HBox>
+      <Label fx:id="errorLabel" text="Invalid expression" textFill="#c80000">
+         <padding>
+            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+         </padding>
+      </Label>
    </children>
-   <padding>
-      <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-   </padding>
 </fx:root>
